--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,16 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
   country_flags: ^4.0.1
+  # HTTP & API
+  http: ^1.1.0
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
