--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^1.1.0
   dio: ^5.3.2
   json_annotation: ^4.9.0 # Add this line
+  get_it: ^8.2.0
 
 dev_dependencies:
   flutter_test:
